rust/macros/tests/invalid/target/debug/deps/macros-429a777f45f8fa81.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/macros-429a777f45f8fa81.d: /Users/ray/projects/exercism/rust/macros/src/lib.rs

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libmacros-429a777f45f8fa81.rmeta: /Users/ray/projects/exercism/rust/macros/src/lib.rs

/Users/ray/projects/exercism/rust/macros/src/lib.rs:
